--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@gsap/react": "^2.1.2",
     "@types/gsap": "^1.20.2",
     "dotenv": "^16.4.7",
-    "gsap": "3.8.0",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.475.0",
     "matter-js": "^0.20.0",
     "next": "12",
